force-app/main/default/objects/UnidadeTabelaVendas__c/fields/CoeficienteTabela__c.field-meta.xml
<CustomField>
    <fullName>CoeficienteTabela__c</fullName>
    <label>Coeficiente na Tabela</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>