force-app/main/default/objects/UnidadeTabelaVendas__c/fields/TabelaVenda__c.field-meta.xml
<CustomField>
    <fullName>TabelaVenda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tabela de Venda</label>
    <referenceTo>TabelaVendas__c</referenceTo>
    <relationshipLabel>Unidades da Tabela de Vendas</relationshipLabel>
    <relationshipName>Unidades_da_Tabela_de_Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>