force-app/main/default/objects/UnidadeTabelaVendas__c/fields/ValorVenda__c.field-meta.xml
<CustomField>
    <fullName>ValorVenda__c</fullName>
    <formula>PrecoLista__c  * CoeficienteTabela__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor de venda</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>